--- a/_config.yml
+++ b/_config.yml
@@ -1,49 +1,19 @@
-# Base Jekyll configuration
+# Site settings
+title: Rod Machen
+email: mail@rodmachen.com
+description: > # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: "http://rodmachen.github.io" # the base hostname & protocol for your site
+twitter_username: rod_machen
+github_username:  rodmachen
 
-# Gulp handles some Jekyll configuration. If you set something here and
-# it doesn't work, check if it is set in the Gulpfile.
-
-# Use _config.build.yml to override these settings on `gulp build`.
-
-name: rodmachen.github.io
-description: rodmachen.github.io.
-
-author:
-  name: rodmachen
-  email: rodmachen@gmail.com
-
-# Exclude directories and/or files from the conversion.
-# Gulp moves styles, scripts, images and fonts directories.
-exclude: ['styles', 'scripts', 'images', 'fonts']
-keep_files: ['styles', 'scripts', 'images', 'fonts']
-
-# Force inclusion of directories and/or files in the conversion.
-# .htaccess is a good example since dotfiles are excluded by default.
-include: ['.htaccess']
-
-# Default post path style
-# date  /:categories/:year/:month/:day/:title.html
-# pretty  /:categories/:year/:month/:day/:title/
-# none  /:categories/:title.html
-permalink: pretty
-
-# Publish posts with future date.
-# _config.build.yml sets this to false on `gulp build`
-future: true
-
-# Compile posts in the _drafts directory.
-# _config.build.yml sets this to false on `gulp build`
-show_drafts: false
-
-# Split posts over multiple subdirectories called “page2”, “page3”, … “pageN”
-paginate: 10
-paginate_path: 'page:num'
-
-# Markdown library
-markdown: redcarpet
-# Markdown library options
-# redcarpet:
-  # extensions: ['fenced_code_blocks', 'smart']
-
-# Use Pygments to highlight code blocks
-highlighter: pygments
+# Build settings
+markdown: kramdown
+twitter:
+  consumer_key: 6H7jpH0roACOt7EOMwiUIOwWF
+  consumer_secret: eBdQhlnI1ZMWZwtG2vehHUDr37nE1ECJquxVdhJUMGEfWaYrci
+  access_token: 2536204056-yNSHlK2cAnXbmLzPDWG5USuZkWDVAqr3bYSGr0V
+  access_token_secret: GGGoHgQR5hSLkEzaTr7FDlexoUJOCruBFYhPoH1mdRnYI
