--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ github_username:  rodmachen
 # Build settings
 markdown: kramdown
 
-# permalink: /:title
+permalink: /:title
 
 paginate: 5
 paginate_path: 'page:num'
